--- a/nav-challenge-challenge/style.css
+++ b/nav-challenge-challenge/style.css
@@ -9,111 +9,111 @@
 
 */
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.3rem;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3rem;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 h1 {
-    font-size: 3rem;
-    margin-top: 0;
+  font-size: 3rem;
+  margin-top: 0;
 }
 
 .section-title {
-    color: #87629A;
+  color: #87629a;
 }
 
 .btn {
-    display: inline-block;
-    text-decoration: none;
-    text-transform: uppercase; 
-    color: #23424A;
-    font-weight: 900;
-    background-color: #38CFD9;
-    padding: .75em 2em;
-    border-radius: 100px;
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #23424a;
+  font-weight: 900;
+  background-color: #38cfd9;
+  padding: 0.75em 2em;
+  border-radius: 100px;
 }
 
 .btn:hover,
 .btn:focus {
-    opacity: .75; 
+  opacity: 0.75;
 }
 
 .container {
-    width: 80%;
-    max-width: 1100px;
-    margin: 0 auto;
-    /* added for nav-toggle positioning */
-    position: relative;
+  width: 80%;
+  max-width: 1100px;
+  margin: 0 auto;
+  /* added for nav-toggle positioning */
+  position: relative;
 }
 
 header {
-    background: #136c72;
-    padding: 1em 0;
-    text-align: center;
+  background: #136c72;
+  padding: 1em 0;
+  text-align: center;
 }
 
 .nav {
-    width: 100%;
+  width: 100%;
 }
 
-
-
 .nav-toggle {
-    cursor: pointer;
-    border: 0;
-    width: 3em;
-    height: 3em;
-    padding: 0em;
-    border-radius: 50%;
-    background: #072A2D;
-    color: white;
-    transition: opacity 250ms ease;
-    
-    position: absolute;
-    left: 0;
+  cursor: pointer;
+  border: 0;
+  width: 3rem;
+  height: 3rem;
+  padding: 0em;
+  border-radius: 50%;
+  background: #072a2d;
+  color: white;
+  transition: opacity 250ms ease;
+
+  position: absolute;
+  left: 0;
 }
 
 .nav-toggle:focus,
 .nav-toggle:hover {
-    opacity: .75;
+  opacity: 0.75;
 }
 
 .hamburger {
-    width: 50%;
-    position: relative;
+  width: 50%;
+  position: relative;
 }
 
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-    display: block;
-    margin: 0 auto;
-    height: 3px;
-    background: white;
+  display: block;
+  margin: 0 auto;
+  height: 3px;
+  background: white;
 }
 
 .hamburger::before,
 .hamburger::after {
-    content: '';
-    width: 100%;
+  content: "";
+  width: 100%;
 }
 
 .hamburger::before {
-    transform: translateY(-6px);
+  transform: translateY(-6px);
 }
 
 .hamburger::after {
-    transform: translateY(3px);
+  transform: translateY(3px);
 }
 
 /* made changes here from video
@@ -121,148 +121,122 @@ header {
    
    Works the same :) */
 .nav {
-    visibility: hidden;
-    min-height: 0;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 2.5em;
-    padding-bottom: 3em;
-}
-
-.nav__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.nav__list--primary {
-    padding-top: 1em;
-}
-
-.nav__list--secondary .nav__item:last-child {
-    margin-top: 1em;
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+  font-size: 1rem;
 }
 
 .nav--visible {
-    visibility: visible;
-    height: auto;
-    position: relative;
-} 
+  visibility: visible;
+  height: auto;
+  position: relative;
+}
 
-.nav__item + .nav__item {
-    padding-top: 1.3em;
+.nav__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.nav__list--primary {
+    margin-bottom: 2em;
+}
+
+.nav__item {
+    margin-top: .75em;
 }
 
 .nav__link {
     color: #FFF;
+    text-transform: uppercase;
     text-decoration: none;
 }
 
 .nav__link--button {
-    background-color: #FFF;
-    color: #136c72;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-
-    padding: .5em .8em;
-    border-radius: 2em;
+    padding: .25em .75em;
+    background-color: #fff;
+    color: #23424a;
+    border-radius: 100px;
 }
 
+.nav__link:hover,
+.nav__link:focus {
+    opacity: .65;
+}
 
 .logo {
-    height: 30px;
+  height: 30px;
 }
 
-
 .hero {
-    padding: 100px 0;
-    background-color: #23424A;
-    color: #FFF;
+  padding: 100px 0;
+  background-color: #23424a;
+  color: #fff;
 }
 
 .hero__img {
-    margin-top: 2em;
+  margin-top: 2em;
 }
 
-
 .hero p {
-    margin-bottom: 3em;
+  margin-bottom: 3em;
 }
 
 .main {
-    margin-top: 3em;
+  margin-top: 3em;
 }
-
 
 .sidebar {
-    padding: 1em;
-    text-align: center;
-    color: #fff;
-    background-color: #136c72;
-
+  padding: 1em;
+  text-align: center;
+  color: #fff;
+  background-color: #136c72;
 }
 
-
-
 @media (min-width: 800px) {
+  .nav-toggle {
+    display: none;
+  }
 
-    
-    .nav-toggle {
-        display: none;
-    }
+  .nav {
+    visibility: visible;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: auto;
+    position: relative;
+  }
 
-    .nav {
-        visibility: visible;
-        display: flex;
-        flex-direction: row;
-        height: auto;
-        position: relative;
-        padding: 0;
-    }
+  .nav__list {
+    display: flex;
+    margin: 0;
+  }
 
-    .nav__list--primary {
-        margin: 0 auto;
-    }
+  .nav__item {
+    margin: 0 0 0 1.5em;
+  }
 
-    .nav__list--primary, .nav__list--secondary {
-        display: flex;
-        padding: 0;
-        gap: 1em;
-        align-items: center;
-    }
+  .row {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .nav__item + .nav__item {
-        padding-top: 0;
-    }
+  .hero__text {
+    width: 62%;
+  }
 
-    .nav__list--secondary .nav__item:last-child {
-        margin-top: 0;
-    }
+  .hero__img {
+    width: 32%;
+    align-self: flex-start;
+    margin: 0;
+  }
 
-    .row {
-        display: flex;
-        justify-content: space-between;
-    }
+  .primary-content {
+    width: 62%;
+  }
 
-    .hero__text {
-        width: 62%;
-    }
-    
-    .hero__img {
-        width: 32%;
-        align-self: flex-start;
-        margin: 0;
-    }
-    
-    .primary-content {
-        width: 62%;
-    }
-
-    .sidebar {
-        width: 32%;
-    }
-    
-    
+  .sidebar {
+    width: 32%;
+  }
 }
